# NeuralMidiFXPlugin

./: CMakeLists.txt  CMakeLists.wrapper.txt  GUIReadme.md  README.md  Serializing_Models.md  SingleMidiThread.cpp  SingleMidiThread.h  readme_updates.md
CMake/: Findjuce.cmake
Demos/PatternInterpolation/: CMakeLists.txt  Readme.md  settings.json
Demos/UnconditionalMidiGeneration/: CMakeLists.txt  Deploy.cpp
Deployment/: CMakeLists.txt  Configs_Debugging.h  Configs_HostEvents.h  Deploy.cpp  DeploymentData.h  settings.json
Deployment/PluginCode/: CMakeLists.txt  settings.json
NeuralMidiFXPlugin/: CMakeLists.txt  Configs_HostEvents.h
NeuralMidiFXPlugin/NeuralMidiFXPlugin/: CMakeLists.txt  Configs_Debugging.h  Configs_GUI.h  Configs_HostEvents.h  Configs_Model.h  CustomStructs.h  ITP_Deploy.cpp  MDL_Deploy.cpp  Model_Input.h  Model_Output.h  Modified_Configs_GUI.h  PPP_Deploy.cpp  libtorch_setup.cmake  settings.json
NeuralMidiFXPlugin/NeuralMidiFXPlugin/Documentations/: .$ProcessDiagram.drawio.bkp  ProcessDiagram.drawio
NeuralMidiFXPlugin/NeuralMidiFXPlugin/PretrainedModelsSerialization/: README.md  SerializeModels.py  SerializeModelsToONNX.py  params.py
NeuralMidiFXPlugin/NeuralMidiFXPlugin/PretrainedModelsSerialization/BaseGrooveTransformers/models/: encoder.py  io_layers.py  transformer.py  utils.py
NeuralMidiFXPlugin/NeuralMidiFXPlugin/PretrainedModelsSerialization/pyTorch_models/: solar_shadow_247-epoch_41.Model
NeuralMidiFXPlugin/NeuralMidiFXPlugin/PretrainedModelsSerialization/serialized/: model_4.pt
NeuralMidiFXPlugin/NeuralMidiFXPlugin/PretrainedModelsSerialization/serializedONNX/: model_1.onnx  model_1_input_layer.onnx  model_1_output_layer.onnx  model_2.onnx  model_2_input_layer.onnx  model_2_output_layer.onnx  model_3.onnx  model_3_input_layer.onnx  model_3_output_layer.onnx  model_4.onnx  model_4_encoder.onnx  model_4_input_layer.onnx  model_4_output_layer.onnx
NeuralMidiFXPlugin/NeuralMidiFXPlugin/Source/: GuiElements.h  ITP_Deploy.cpp  InterThreadFifos.h  MDL_Deploy.cpp  PPP_Deploy.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  model_settings.h  settings.h
NeuralMidiFXPlugin/NeuralMidiFXPlugin/Source/DeploymentSettings/: Debugging.h  GuiAndParams.h  Model.h  ThreadsAndQueuesAndInputEvents.h
NeuralMidiFXPlugin/NeuralMidiFXPlugin/Source/DeploymentThreads/: Configs_Model.h  InputTensorPreparatorThread.cpp  InputTensorPreparatorThread.h  ModelThread.cpp  ModelThread.h  PlaybackPreparatorThread.cpp  PlaybackPreparatorThread.h
NeuralMidiFXPlugin/NeuralMidiFXPlugin/Source/Includes/: APVTSMediatorThread.h  Configs_Parser.h  CustomStructsAndLockFreeQueue.h  EventTracker.h  GenerationEvent.h  GuiElements.h  GuiParameters.h  InputEvent.h  LockFreeQueue.h  MidiDisplayWidget.h  ProcessingScriptsLoader.h  UtilityMethods.h  colored_cout.h
NeuralMidiFXPlugin/NeuralMidiFXPlugin/Source/Model/: ModelAPI.cpp  ModelAPI.h
NeuralMidiFXPlugin/NeuralMidiFXPlugin/Source/ProcessorThreads/: APVTSMediatorThread.h  GrooveThread.cpp  GrooveThread.h  InputTensorPreparatorThread.cpp  InputTensorPreparatorThread.h  ModelThread.cpp  ModelThread.h  PlaybackPreparatorThread.cpp  PlaybackPreparatorThread.h
NeuralMidiFXPlugin/NeuralMidiFXPlugin/Source/gui/: CustomGuiTextEditors.cpp  CustomGuiTextEditors.h  CustomUIWidgets.h
NeuralMidiFXPlugin/NeuralMidiFXPlugin/Source/main/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
NeuralMidiFXPlugin/NeuralMidiFXPlugin/Source/src/DeploymentSettings/: GuiAndParams.h  ThreadsAndQueuesAndInputEvents.h
NeuralMidiFXPlugin/NeuralMidiFXPlugin/Source/src/DeploymentThreads/: ModelThread.cpp  ModelThread.h  PlaybackPreparatorThread.h
NeuralMidiFXPlugin/NeuralMidiFXPlugin/Source/src/Includes/: GuiParameters.h  InputEvent.h  LockFreeQueue.h
NeuralMidiFXPlugin/NeuralMidiFXPlugin_SingleThread/: CMakeLists.txt  CustomStructs.h  Deploy.cpp  SMD_Deploy.cpp
NeuralMidiFXPlugin/NeuralMidiFXPlugin_ThreeThreads/: CMakeLists.txt  Configs_HostEvents.h  CustomStructs.h  ITP_Deploy.cpp  MDL_Deploy.cpp  PPP_Deploy.cpp  settings.json
PluginCode/: CMakeLists.txt  Deploy.cpp  deploy.h  settings.json
Source/DeploymentThreads/: DeploymentThread.cpp  DeploymentThread.h  InputTensorPreparatorThread.cpp  InputTensorPreparatorThread.h  ModelThread.cpp  ModelThread.h  PlaybackPreparatorThread.cpp  PlaybackPreparatorThread.h  SingleMidiThread.cpp  SingleMidiThread.h
Source/Includes/: APVTSMediatorThread.h  AudioDisplayWidget.h  Configs_Model.h  Configs_Parser.h  CustomLooksAndFeels.h  GenerationEvent.h  GuiElements.h  GuiParameters.h  ImageButton.h  InputEvent.h  LockFreeQueue.h  LongPressButton.h  MidiDisplayWidget.h  PresetManagerWidget.h  ProcessingScriptsLoader.h  StandaloneControlsWidget.h  StandaloneTempoMeterWidget.h  TorchScriptAndPresetLoaders.h  TriangleSliders.h  chrono_timer.h
Source/NeuralMidiFXPlugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  processBlock.cpp
shared_plugin_helpers/ProcessorBase/: Helpers.h  ProcessorBase.h
